# Linux-Backup-Helper

./: LICENSE.txt  README.md  advanced_copy.py  backup_restore_settings.py  backup_stats.py  base_window.py  capture_verify.py  constants.py  copy_worker.py  copy_worker_core.py  copy_worker_gui.py  copy_worker_smb.py  dialog_base.py  dialogs.py  disk_analyzer.py  dotfiles_manager.py  drive_manager.py  drive_utils.py  dry_run.py  entry_dialog.py  file_process.py  firewall_rules.py  global_style.py  header_settings_dialog.py  history.py  icons.py  install.sh  integrity_checker.py  linux_distro_helper.py  logging_config.py  main.py  misc_dialogs.py  mount_dialogs.py  options.py  package_installer_launcher_dialog_thread.py  package_installer_options.py  pre_post_hooks.py  profile_compare.py  profiles_dialog.py  pyproject.toml  (+25 more)
images/: screenshots
